@@ -64,6 +64,10 @@
 
 /****************************************************************************/
 
+#define MILLION (1000000)
+
+/****************************************************************************/
+
 #define NUM_ENTRIES(t) (sizeof(t) / sizeof(t[0]))
 
 /****************************************************************************/
